# exterm

./: README.md  pyproject.toml
exterm/cli/: __init__.py
exterm/core/: files.py  term.py
exterm/core/visual/: ui.py
tests/: __init__.py
